--- a/osa0/0.4_uusi_muistiinpano.md
+++ b/osa0/0.4_uusi_muistiinpano.md
@@ -1,1 +1,37 @@
 # Uusi muistiinpano
+
+```mermaid
+sequenceDiagram
+    participant browser
+    participant server
+    
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
+    Note left of server:  The browser saves the new note
+    server-->>browser: 302 (redirect)
+    deactivate server
+    
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    activate server
+    server-->>browser: HTLML document
+    deactivate server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+    activate server
+    server-->>browser: the css file
+    deactivate server
+    
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    activate server
+    server-->>browser: the JavaScript file
+    deactivate server
+    
+    Note right of browser: The browser starts executing the JavaScript code which leads to fetching JSON from the server
+    
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+    activate server
+    server-->>browser: [{ "content": "HTML is easy", "date": "2024-1-24" }, ... ]
+    deactivate server    
+
+    Note right of browser: The browser executes the callback function that renders the notes
+```
